<resources>

    <string name="app_name1">다영/수나</string>

    <string name="initial_logo">Logo</string>

    <string name="id">ID</string>

    <string name="password">Password</string>

    <string name="findmyinfo">아이디/비밀번호 찾기</string>

    <string name="membership">회원가입</string>

    <string name="login_logo">login_logo</string>

    <string name="login">Login</string>

    <string name="joinFin">완료</string>

    <string name="addSearch">검색</string>

    <string name="searchAddress">읍, 면, 동으로 검색해주세요</string>

    <string name="register">등록하기</string>

    <string name="ch10">10대</string>

    <string name="chMale">남성</string>

    <string name="ckFemale">여성</string>

    <string name="coAddress">주소</string>

    <string name="coAge">나이</string>

    <string name="ch40">40대 이상</string>

    <string name="chAddress">우리 동네 사람만</string>

    <string name="ch20">20대</string>

    <string name="coFilter">필터</string>

    <string name="coSex">성별</string>

    <string name="ch30">30대</string>

    <string name="coText">내용</string>

    <string name="app_name_chat">채팅</string>
    <string name="app_name_chatwith">@string/user1</string>
    <string name="app_name_mainpage">메인페이지</string>
    <string name="app_name_detailpage">게시판</string>
    <string name="app_name_writepage">상품 등록</string>

    <string name="title1">친환경 청송사과</string>
    <string name="place1">동의대역 2번 출구</string>
    <string name="price1">개당 800원</string>

    <string name="title2">국내산 양파 상태 좋아요</string>
    <string name="place2">동의빌라 인근</string>
    <string name="price2">개당 500원</string>

    <string name="title3">엽기떡볶이 같이 시켜먹어요~!</string>
    <string name="place3">가야 홈플러스 뒷문 인근</string>
    <string name="price3">가격 미정</string>

    <string name="user1">강수나</string>
    <string name="last_chat1">문학과 삶 팔렸나요?</string>

    <string name="user2">sunakang</string>
    <string name="last_chat2">감사합니다</string>

    <string name="app_name">마이 페이지</string>
    <string name="app_name2">공지사항</string>
    <string name="app_name3">판매내역</string>
    <string name="app_name4">구매내역</string>
    <string name="app_name5">내게시글</string>
    <string name="app_name6">후기작성</string>
    <string name="app_name7">커뮤니티 게시판</string>
    <string name="app_name8">커뮤니티 상세 게시판</string>



    <string name="app_name_">내 상점</string>
    <string name="app_name_review">후기</string>
    <string name="app_name_sell">판매 상품</string>
    <string name="app_name_report">상점 신고/차단</string>
    <string name="left1">TODO</string>
    <string name="mystore">내 상점</string>
    <string name="store_name">뽀삐 베이커리</string>
    <string name="introduction1">우리집 마카롱이 제일 맛있어~!</string>
    <string name="introduction_2">네고 사절</string>
    <string name="introduction_3">직거래 우대</string>

    <string name="Report">TODO</string>
    <string name="Review">TODO</string>
    <string name="Receipt">TODO</string>

    <string name="sell">판매 상품</string>
    <string name="review_">후기</string>
    <string name="report">상점 신고/차단</string>
    <string name="home">TODO</string>
    <string name="pencil">TODO</string>
    <string name="chat">TODO</string>
    <string name="community">TODO</string>
    <string name="mypage">TODO</string>
    <string name="left2">TODO</string>
    <string name="sell_list">판매 내역</string>
    <string name="name1">아이패드 에어3</string>
    <string name="date1">2019년 12월 5일</string>
    <string name="state1">사용한지 한 달 되었습니다. 펜슬 2세대 포함 60만원에 팝니다.</string>
    <string name="ipad">TODO</string>
    <string name="button1">거래 완료</string>
    <string name="name2">문학과 삶 대학 교재</string>
    <string name="date2">2020년 10월 10일</string>
    <string name="state2">사용 흔적 거의 없습니다. 1만원에 팝니다.</string>
    <string name="button2">판매 중</string>
    <string name="left3">TODO</string>
    <string name="review">후기</string>
    <string name="storename1">강가네 손만두</string>
    <string name="storename2">국이네 다꾸샵</string>
    <string name="storename3">진주의 집게버거</string>
    <string name="review1">양파 상태도 너무 좋고 판매자분도 너무 친절하셔서 좋았어요! 다음에도 거래했으면 좋겠어요^^</string>
    <string name="review2">엽떡 혼자 시켜먹기엔 양이 많아 고민하고 있었는데 깔끔하게 나눠먹을 수 있어서 좋았어요. 하지만 양이 조금 작은 느낌이었어요..</string>
    <string name="review3">사과가 조금 필요했는데 함께 구매해서 싸게 적당히 살 수 있었어요! 번창하세요~</string>
    <string name="Title1">국내산 양파 상태좋아요</string>
    <string name="Title2">엽기떡볶이 같이 시켜먹어요~!</string>
    <string name="Title3">친환경 청송사과</string>
    <string name="left">TODO</string>
    <string name="report_choice">신고유형 선택</string>
    <string name="todo">TODO</string>
    <string name="leftreport">TODO</string>
    <string name="report_list">신고유형 선택</string>
    <string name="reportlist1">상점 차단</string>
    <string name="reportlist2">거래사기 (1:1 상담)</string>
    <string name="reportlist3">거래 금지 품목</string>
    <string name="reportlist4">거래 금지 품목</string>
    <string name="reportlist5">언어폭력</string>
    <string name="reportlist6">거래비매너 (거래파기, 늦은배송)</string>
    <string name="reportlist7">광고 (교신 및 상점홍보)</string>
    <string name="home_navigation">home</string>
    <string name="pencil_navigation">write</string>
    <string name="chat_navigation">chat</string>
    <string name="community_navigation">community</string>
    <string name="mypage_navigation">mypage</string>
    <string name="communityWrite">커뮤니티 글쓰기</string>
    <string name="findMyInfo">아이디·비밀번호 찾기</string>
    <string name="email">Email</string>


    <string name="kakaologin">카카오 로그인</string>
    <string name="kakao_app_key">47889a08a1aa38da8d9238d88da7957b</string>




</resources>