<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F3F3F3"
    android:orientation="vertical"
    android:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar5"
            android:layout_width="412dp"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reportlist1"
        android:textColor="#000000"
        android:textSize="18sp"
       />

    <Button
        android:id="@+id/community_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reportlist7"
        android:textColor="#000000"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reportlist6"
        android:textColor="#000000"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reportlist5"
        android:textColor="#020000"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reportlist4"
        android:textColor="#000000"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reportlist3"
        android:textColor="#000000"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/send_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reportlist2"
        android:textColor="#000000"
        android:textSize="18sp"
       />

</LinearLayout>




