<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginB"
        android:layout_width="308dp"
        android:layout_height="53dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:background="#000000"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:backgroundTint="#3589F1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.233" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:clickable="true"
        android:hint="@string/password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="98dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_blue" />

    <TextView
        android:id="@+id/membership"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/membership"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <!--    <Button-->
    <!--        android:id="@+id/btn_custom_login"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="4dp"-->
    <!--        android:onClick="onClick"-->
    <!--        android:text="카카오 로그인"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <Button-->
    <!--        android:id="@+id/btn_custom_login_out"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="52dp"-->
    <!--        android:onClick="onClick"-->
    <!--        android:text="카카오 로그아웃"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <!--    <com.kakao.usermgmt.LoginButton-->
    <!--        android:id="@+id/btnKakaoLogin"-->
    <!--        android:layout_width="280dp"-->
    <!--        android:layout_height="61dp"-->
    <!--        android:layout_centerVertical="true"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:clickable="true"-->
    <!--        android:onClick="onClick"-->
    <!--        android:layout_marginLeft="16dp"-->
    <!--        android:layout_marginTop="368dp"-->
    <!--        android:layout_marginEnd="115dp"-->
    <!--        android:layout_marginRight="115dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/btn_custom_login"
        android:layout_width="308dp"
        android:layout_height="53dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="502dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="카카오로그인"
        android:textColor="#3A1D1D"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#F7E600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>